# sova-sdk-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  build.rs
src/: auth.rs  block_engine.rs  client.rs  error.rs  lib.rs  pem.rs  proto.rs  searcher.rs
tests/: auth_tests.rs
