[package]
name = "mevton_rs"
version = "0.0.1"
edition = "2021"
description = "Mevton SDK for interacting with Block Engine and Searcher services"
authors = ["A <a@mevton.com>"]
repository = "https://github.com/mevton-labs/mevton-sdk-rs.git"
homepage = "https://github.com/mevton-labs/mevton-sdk-rs"
license = "MIT"


[dependencies]
fastcrypto = "0.1.8"
prost = "0.12"
prost-types = "0.12"
thiserror = "^1.0.39"
tokio = "1.38.0"
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
